tests/e2e/semantics/obj_key_none.error
Error: syntax error in story at line 4

4|    b = {"a": "a", fn_none(): "bar"}
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

E0125: `none` is not hashable and can't be used as an object key.
