tests/e2e/semantics/obj_key_none.story
function fn_none
    return

b = {"a": "a", fn_none(): "bar"}
